--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "react-dom": "^19.1.1",
     "react": "^19.1.1",
-    "@google/genai": "^1.17.0"
+    "@google/genai": "^1.17.0",
+    "express": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "axios": "^1.12.2",
+    "buffer": "^6.0.3",
+    "form-data": "^4.0.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
